Implemented skeleton classes of all ships, added a new projectile, and roughly implemented ship 2

--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -2,6 +2,9 @@
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 AnimationSet      = AS-Pilot
 
+[G-Pilot]
+Pivot             = center
+
 [B-Pilot]
 Dynamic           = true
 FixedRotation     = true
@@ -30,6 +33,7 @@ KeyDuration       = 0.1
 [O-PilotP1]
 Body              = B-PilotP1
 Position          = (-512, 350, 0)
+ShaderList        = SH-OutlineP1
 
 ;Class Data
 UpInput           = UpP1
@@ -45,12 +49,13 @@ JumpInput         = DownwardP1
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags         = pilotP1
-CheckMask         = wall # zone # partition # melee1P2 laserP2 # orbP2
+CheckMask         = wall # zone # partition # meleeP2 # laserP2 # orbP2 # laserWallP2
 
 [O-PilotP2]
 Body              = B-PilotP2
 Position          = (512, 350, 0)
 Flip              = x
+ShaderList        = SH-OutlineP2
 
 ;Class Data
 UpInput           = UpP2
@@ -66,7 +71,7 @@ JumpInput         = DownwardP2
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags         = pilotP2
-CheckMask         = wall # zone # partition # melee1P1 # laserP1 # orbP1
+CheckMask         = wall # zone # partition # meleeP1 # laserP1 # orbP1 # laserWallP1
 
 ;Specific Pilots
 
@@ -88,16 +93,15 @@ MaxCooldownDash      = 2.0
 MaxCooldownParry     = 1.0
 MaxCooldownMelee     = 1.0
 
-[G-Pilot1]
+[G-Pilot1@G-Pilot]
 Texture           = soldier_full.png
 TextureOrigin     = (0, 0, 0)
 TextureSize       = (32, 32, 0)
-Pivot             = center
 
 [O-Pilot1P1@O-Pilot1]
 Body                 = B-Pilot1P1
 Position             = @O-PilotP1
-ShaderList           = SH-OutlineP1
+ShaderList           = @O-PilotP1
 ChildList            = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry
 
 ;Class Data
@@ -118,14 +122,14 @@ PartList          = BP-PilotP1 # BP-Ship1 # BP-Melee1P1
 [BP-Melee1P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = melee1P1
+SelfFlags         = meleeP1
 CheckMask         = pilotP2
 
 [O-Pilot1P2@O-Pilot1]
 Body                 = B-Pilot1P2
 Position             = @O-PilotP2
 Flip                 = @O-PilotP2
-ShaderList           = SH-OutlineP2
+ShaderList           = @O-PilotP2
 ChildList            = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry
 
 ;Class Data
@@ -146,7 +150,553 @@ PartList          = BP-PilotP2 # BP-Ship1 # BP-Melee1P2
 [BP-Melee1P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = melee1P2
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot2@O-Pilot]
+Graphic              = G-Pilot2
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot2@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot2P1@O-Pilot2]
+Body                 = B-Pilot2P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot2P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship2 # BP-Melee2P1
+
+[BP-Melee2P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot2P2@O-Pilot2]
+Body                 = B-Pilot2P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot2P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship2 # BP-Melee2P2
+
+[BP-Melee2P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot3@O-Pilot]
+Graphic              = G-Pilot3
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot3@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot3P1@O-Pilot3]
+Body                 = B-Pilot3P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot3P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship3 # BP-Melee3P1
+
+[BP-Melee3P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot3P2@O-Pilot3]
+Body                 = B-Pilot3P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot3P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship3 # BP-Melee3P2
+
+[BP-Melee3P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot4@O-Pilot]
+Graphic              = G-Pilot4
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot4@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot4P1@O-Pilot4]
+Body                 = B-Pilot4P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot4P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship4 # BP-Melee4P1
+
+[BP-Melee4P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot4P2@O-Pilot4]
+Body                 = B-Pilot4P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot4P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship4 # BP-Melee4P2
+
+[BP-Melee4P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot5@O-Pilot]
+Graphic              = G-Pilot5
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot5@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot5P1@O-Pilot5]
+Body                 = B-Pilot5P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot5P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship5 # BP-Melee5P1
+
+[BP-Melee5P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot5P2@O-Pilot5]
+Body                 = B-Pilot5P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot5P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship5 # BP-Melee5P2
+
+[BP-Melee5P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot6@O-Pilot]
+Graphic              = G-Pilot6
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot6@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot6P1@O-Pilot6]
+Body                 = B-Pilot6P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot6P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship6 # BP-Melee6P1
+
+[BP-Melee6P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot6P2@O-Pilot6]
+Body                 = B-Pilot6P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot6P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship6 # BP-Melee6P2
+
+[BP-Melee6P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot7@O-Pilot]
+Graphic              = G-Pilot7
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot7@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot7P1@O-Pilot7]
+Body                 = B-Pilot7P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot7P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship7 # BP-Melee7P1
+
+[BP-Melee7P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot7P2@O-Pilot7]
+Body                 = B-Pilot7P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot7P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship7 # BP-Melee7P2
+
+[BP-Melee7P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
+CheckMask         = pilotP1
+
+[O-Pilot8@O-Pilot]
+Graphic              = G-Pilot8
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.8
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot8@G-Pilot]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+
+[O-Pilot8P1@O-Pilot8]
+Body                 = B-Pilot8P1
+Position             = @O-PilotP1
+ShaderList           = @O-PilotP1
+ChildList            = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot8P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship8 # BP-Melee8P1
+
+[BP-Melee8P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = meleeP1
+CheckMask         = pilotP2
+
+[O-Pilot8P2@O-Pilot8]
+Body                 = B-Pilot8P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ShaderList           = @O-PilotP2
+ChildList            = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot8P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship8 # BP-Melee8P2
+
+[BP-Melee8P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = meleeP2
 CheckMask         = pilotP1
 
 ;Melee
@@ -195,12 +745,42 @@ String            = 10
 
 ; Icons
 
-[O-Pilot1IconP1]
-Graphic              = G-Pilot1
+[O-PilotIcon]
 Position             = (0, 0, -0.1)
 UseParentSpace       = position
 IgnoreFromParent     = scale
+
+[O-Pilot1IconP1@O-PilotIcon]
+Graphic              = G-Pilot1
 ChildList            = O-Ship1IconP1
+
+[O-Pilot2IconP1@O-PilotIcon]
+Graphic              = G-Pilot2
+ChildList            = O-Ship2IconP1
+
+[O-Pilot3IconP1@O-PilotIcon]
+Graphic              = G-Pilot3
+ChildList            = O-Ship3IconP1
+
+[O-Pilot4IconP1@O-PilotIcon]
+Graphic              = G-Pilot4
+ChildList            = O-Ship4IconP1
+
+[O-Pilot5IconP1@O-PilotIcon]
+Graphic              = G-Pilot5
+ChildList            = O-Ship5IconP1
+
+[O-Pilot6IconP1@O-PilotIcon]
+Graphic              = G-Pilot6
+ChildList            = O-Ship6IconP1
+
+[O-Pilot7IconP1@O-PilotIcon]
+Graphic              = G-Pilot7
+ChildList            = O-Ship7IconP1
+
+[O-Pilot8IconP1@O-PilotIcon]
+Graphic              = G-Pilot8
+ChildList            = O-Ship8IconP1
 
 ; Temporary melee and parry fx items until I finalize animations.
 
