--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -3,6 +3,9 @@ LifeTime          = 5.0
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 UseParentSpace    = position
 
+[G-Projectile]
+Pivot             = center
+
 [B-Projectile]
 Dynamic           = true
 FixedRotation     = true
@@ -13,12 +16,7 @@ Solid             = true
 
 [O-Laser@O-Projectile]
 ; O-Laser Class Data
-SpeedLaser        = 1000
-
-[G-Laser]
-Pivot             = center
-
-[B-Laser@B-Projectile]
+Speed             = 1000
 
 [BP-Laser@BP-Projectile]
 Type              = box
@@ -27,10 +25,10 @@ Type              = box
 Graphic           = G-LaserP1
 Body              = B-LaserP1
 
-[G-LaserP1@G-Laser]
+[G-LaserP1@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
 
-[B-LaserP1@B-Laser]
+[B-LaserP1@B-Projectile]
 PartList          = BP-LaserP1
 
 [BP-LaserP1@BP-Laser]
@@ -41,10 +39,10 @@ CheckMask         = wall # pilotP2
 Graphic           = G-LaserP2
 Body              = B-LaserP2
 
-[G-LaserP2@G-Laser]
+[G-LaserP2@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
 
-[B-LaserP2@B-Laser]
+[B-LaserP2@B-Projectile]
 PartList          = BP-LaserP2
 
 [BP-LaserP2@BP-Laser]
@@ -55,12 +53,7 @@ CheckMask         = wall # pilotP1
 Scale             = (0.5, 0.5, 0.5)
 
 ; O-Orb Class Data
-SpeedOrb          = 600
-
-[G-Orb]
-Pivot             = center
-
-[B-Orb@B-Projectile]
+Speed             = 600
 
 [BP-Orb@BP-Projectile]
 Type              = sphere
@@ -70,10 +63,10 @@ Restitution       = 1.0 ; A restitution of one to allow for "perfect" bouncing.
 Graphic           = G-OrbP1
 Body              = B-OrbP1
 
-[G-OrbP1@G-Orb]
+[G-OrbP1@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/ufoBlue.png
 
-[B-OrbP1@B-Orb]
+[B-OrbP1@B-Projectile]
 PartList          = BP-OrbP1
 
 [BP-OrbP1@BP-Orb]
@@ -84,12 +77,49 @@ CheckMask         = wall # pilotP2
 Graphic           = G-OrbP2
 Body              = B-OrbP2
 
-[G-OrbP2@G-Orb]
+[G-OrbP2@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/ufoRed.png
 
-[B-OrbP2@B-Orb]
+[B-OrbP2@B-Projectile]
 PartList          = BP-OrbP2
 
 [BP-OrbP2@BP-Orb]
 SelfFlags         = orbP2
+CheckMask         = wall # pilotP1
+
+[O-LaserWall@O-Projectile]
+Rotation          = 90.0
+
+;O-LaserWall Class Data
+Speed             = 450
+
+[BP-LaserWall@BP-Projectile]
+Type              = box
+
+[O-LaserWallP1@O-LaserWall]
+Graphic           = G-LaserWallP1
+Body              = B-LaserWallP1
+
+[G-LaserWallP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
+
+[B-LaserWallP1@B-Projectile]
+PartList          = BP-LaserWallP1
+
+[BP-LaserWallP1@BP-LaserWall]
+SelfFlags         = laserWallP1
+CheckMask         = wall # pilotP2
+
+[O-LaserWallP2@O-LaserWall]
+Graphic           = G-LaserWallP2
+Body              = B-LaserWallP2
+
+[G-LaserWallP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
+
+[B-LaserWallP2@B-Projectile]
+PartList          = BP-LaserWallP2
+
+[BP-LaserWallP2@BP-LaserWall]
+SelfFlags         = laserWallP2
 CheckMask         = wall # pilotP1
