--- a/data/config/Shader.ini
+++ b/data/config/Shader.ini
@@ -5,6 +5,7 @@ BorderThicknessY   = 0.025 ; Relative to the size (length) of the texture, so it
 PulseTime         = 1.0 ; The amount of time, in seconds, that constitutes one complete cycle from BorderColorStart to BorderColorEnd
 AgeInSeconds      = time
 OpacityLimit      = 0.5 ; Since this is an alpha value, it must be between 0.0 and 1.0
+UseCustomParam    = true
 Code              = "
 
 void main()
