--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -1,5 +1,4 @@
 [O-Ship]
-Graphic           = G-Ship
 Position          = (0, 0, 0)
 Rotation          = 90.0
 
@@ -25,19 +24,26 @@ MaxWaveDelayDownward = 0.0
 MaxWaveDelaySuper    = 0.2
 
 [G-Ship]
-Texture           = SpaceShooterRedux/PNG/playerShip1_green.png
 Pivot             = center
 
+[BP-Ship]
+Type              = box
+Solid             = true
+SelfFlags         = ship
+CheckMask         = wall
+
 [O-ShipP1]
-ChildList         = O-NeutralGunP1 # O-UpwardGunP1 # O-DownwardGunP1 # O-SuperGunP1
+ShaderList        = SH-OutlineP1
 
 [O-ShipP2]
 Flip              = y
-ChildList         = O-NeutralGunP2 # O-UpwardGunP2 # O-DownwardGunP2 # O-SuperGunP2
+ShaderList        = SH-OutlineP2
 
 ;Specific Ships
 
 [O-Ship1@O-Ship]
+Graphic           = G-Ship1
+
 ;Class Data
 ClipSizeNeutral   = 10
 ClipSizeUpward    = 1
@@ -53,28 +59,312 @@ NumWavesSuper     = 6
 MaxCooldownNeutral   = 0.5
 MaxCooldownUpward    = 0.5
 MaxCooldownDownward  = 0.5
-MaxCooldownSuper     = 120.0
+MaxCooldownSuper     = 1 ; 120.0
 MaxWaveDelayNeutral  = 0.0
 MaxWaveDelayUpward   = 0.0
 MaxWaveDelayDownward = 0.0
 MaxWaveDelaySuper    = 0.2
 
-[BP-Ship1]
-Type              = box
-Solid             = true
+[G-Ship1@G-Ship]
+Texture           = SpaceShooterRedux/PNG/playerShip1_green.png
+
+[BP-Ship1@BP-Ship]
 TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
 BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-SelfFlags         = ship1
-CheckMask         = wall
 
 [O-Ship1P1@O-Ship1]
-ShaderList           = SH-OutlineP1
-ChildList            = @O-ShipP1
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun1P1 # O-UpwardGun1P1 # O-DownwardGun1P1 # O-SuperGun1P1
 
 [O-Ship1P2@O-Ship1]
 Flip                 = @O-ShipP2
-ShaderList           = SH-OutlineP2
-ChildList            = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun1P2 # O-UpwardGun1P2 # O-DownwardGun1P2 # O-SuperGun1P2
+
+[O-Ship2@O-Ship]
+Graphic           = G-Ship2
+
+;Class Data
+ClipSizeNeutral   = 3
+ClipSizeUpward    = 1
+ClipSizeDownward  = 3
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 1
+WaveSizeDownward  = 3
+WaveSizeSuper     = 5
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 5
+MaxCooldownNeutral   = 0.5
+MaxCooldownUpward    = 0.25
+MaxCooldownDownward  = 0.5
+MaxCooldownSuper     = 1 ; 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.2
+
+[G-Ship2@G-Ship]
+Texture           = SpaceShooterRedux/PNG/playerShip2_green.png
+
+[BP-Ship2@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship2P1@O-Ship2]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun2P1 # O-UpwardGun2P1 # O-DownwardGun2P1 # O-SuperGun2P1
+
+[O-Ship2P2@O-Ship2]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun2P2 # O-UpwardGun2P2 # O-DownwardGun2P2 # O-SuperGun2P2
+
+[O-Ship3@O-Ship]
+Graphic           = G-Ship3
+
+;Class Data
+ClipSizeNeutral   = 3
+ClipSizeUpward    = 1
+ClipSizeDownward  = 1
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 3
+WaveSizeDownward  = 1
+WaveSizeSuper     = 1
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 5
+MaxCooldownNeutral   = 1.0
+MaxCooldownUpward    = 1.0
+MaxCooldownDownward  = 1.0
+MaxCooldownSuper     = 1 ; 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.2
+
+[G-Ship3@G-Ship]
+Texture           = SpaceShooterRedux/PNG/playerShip3_green.png
+
+[BP-Ship3@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship3P1@O-Ship3]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun3P1 # O-UpwardGun3P1 # O-DownwardGun3P1 # O-SuperGun3P1
+
+[O-Ship3P2@O-Ship3]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun3P2 # O-UpwardGun3P2 # O-DownwardGun3P2 # O-SuperGun3P2
+
+[O-Ship4@O-Ship]
+Graphic           = G-Ship4
+Rotation          = -90.0
+
+;Class Data
+ClipSizeNeutral   = 3
+ClipSizeUpward    = 0
+ClipSizeDownward  = 0
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 1
+WaveSizeDownward  = 1
+WaveSizeSuper     = 1
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 1
+MaxCooldownNeutral   = 0.25
+MaxCooldownUpward    = 0
+MaxCooldownDownward  = 0
+MaxCooldownSuper     = 0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.0
+
+[G-Ship4@G-Ship]
+Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen1.png
+
+[BP-Ship4@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship4P1@O-Ship4]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun4P1 # O-UpwardGun4P1 # O-DownwardGun4P1 # O-SuperGun4P1
+
+[O-Ship4P2@O-Ship4]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun4P2 # O-UpwardGun4P2 # O-DownwardGun4P2 # O-SuperGun4P2
+
+[O-Ship5@O-Ship]
+Graphic           = G-Ship5
+Rotation          = -90.0
+
+;Class Data
+ClipSizeNeutral   = 5
+ClipSizeUpward    = 2
+ClipSizeDownward  = 1
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 3
+WaveSizeDownward  = 1
+WaveSizeSuper     = 1
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 1
+MaxCooldownNeutral   = 0.25
+MaxCooldownUpward    = 0.5
+MaxCooldownDownward  = 0.5
+MaxCooldownSuper     = 1 ; 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.0
+
+[G-Ship5@G-Ship]
+Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen2.png
+
+[BP-Ship5@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship5P1@O-Ship5]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun5P1 # O-UpwardGun5P1 # O-DownwardGun5P1 # O-SuperGun5P1
+
+[O-Ship5P2@O-Ship5]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun5P2 # O-UpwardGun5P2 # O-DownwardGun5P2 # O-SuperGun5P2
+
+[O-Ship6@O-Ship]
+Graphic           = G-Ship6
+Rotation          = -90.0
+
+;Class Data
+ClipSizeNeutral   = 1
+ClipSizeUpward    = 1
+ClipSizeDownward  = 2
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 1
+WaveSizeDownward  = 1
+WaveSizeSuper     = 3
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 1
+MaxCooldownNeutral   = 0.5
+MaxCooldownUpward    = 1.0
+MaxCooldownDownward  = 0.5
+MaxCooldownSuper     = 1 ; 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.0
+
+[G-Ship6@G-Ship]
+Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen3.png
+
+[BP-Ship6@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship6P1@O-Ship6]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun6P1 # O-UpwardGun6P1 # O-DownwardGun6P1 # O-SuperGun6P1
+
+[O-Ship6P2@O-Ship6]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun6P2 # O-UpwardGun6P2 # O-DownwardGun6P2 # O-SuperGun6P2
+
+[O-Ship7@O-Ship]
+Graphic           = G-Ship7
+Rotation          = -90.0
+
+;Class Data
+ClipSizeNeutral   = 3
+ClipSizeUpward    = 1
+ClipSizeDownward  = 3
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 1
+WaveSizeDownward  = 3
+WaveSizeSuper     = 5
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 5
+MaxCooldownNeutral   = 0.5
+MaxCooldownUpward    = 0.25
+MaxCooldownDownward  = 0.5
+MaxCooldownSuper     = 1 ; 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.2
+
+[G-Ship7@G-Ship]
+Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen4.png
+
+[BP-Ship7@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship7P1@O-Ship7]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun7P1 # O-UpwardGun7P1 # O-DownwardGun7P1 # O-SuperGun7P1
+
+[O-Ship7P2@O-Ship7]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun7P2 # O-UpwardGun7P2 # O-DownwardGun7P2 # O-SuperGun7P2
+
+[O-Ship8@O-Ship]
+Graphic           = G-Ship8
+Rotation          = -90.0
+
+;Class Data
+ClipSizeNeutral   = 3
+ClipSizeUpward    = 1
+ClipSizeDownward  = 3
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 1
+WaveSizeDownward  = 3
+WaveSizeSuper     = 5
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 5
+MaxCooldownNeutral   = 0.5
+MaxCooldownUpward    = 0.25
+MaxCooldownDownward  = 0.5
+MaxCooldownSuper     = 1 ; 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.2
+
+[G-Ship8@G-Ship]
+Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen5.png
+
+[BP-Ship8@BP-Ship]
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+
+[O-Ship8P1@O-Ship8]
+ShaderList           = @O-ShipP1
+ChildList            = O-NeutralGun8P1 # O-UpwardGun8P1 # O-DownwardGun8P1 # O-SuperGun8P1
+
+[O-Ship8P2@O-Ship8]
+Flip                 = @O-ShipP2
+ShaderList           = @O-ShipP2
+ChildList            = O-NeutralGun8P2 # O-UpwardGun8P2 # O-DownwardGun8P2 # O-SuperGun8P2
 
 ; Guns
 
@@ -90,29 +380,199 @@ Position          = (0.5, 0.0, 0.0)
 [O-SuperGun@O-Spawner]
 Position          = (0.0, 0.0, 0.0)
 
-[O-NeutralGunP1@O-NeutralGun]
+[O-NeutralGun1P1@O-NeutralGun]
 Spawner           = SP-LaserP1
 
-[O-UpwardGunP1@O-UpwardGun]
+[O-UpwardGun1P1@O-UpwardGun]
 Spawner           = SP-OrbP1
 
-[O-DownwardGunP1@O-DownwardGun]
+[O-DownwardGun1P1@O-DownwardGun]
 Spawner           = SP-LaserP1
 
-[O-SuperGunP1@O-SuperGun]
+[O-SuperGun1P1@O-SuperGun]
 Spawner           = SP-LaserP1
 
-[O-NeutralGunP2@O-NeutralGun]
+[O-NeutralGun1P2@O-NeutralGun]
 Spawner           = SP-LaserP2
 
-[O-UpwardGunP2@O-UpwardGun]
+[O-UpwardGun1P2@O-UpwardGun]
 Spawner           = SP-OrbP2
 
-[O-DownwardGunP2@O-DownwardGun]
+[O-DownwardGun1P2@O-DownwardGun]
 Spawner           = SP-LaserP2
 
-[O-SuperGunP2@O-SuperGun]
+[O-SuperGun1P2@O-SuperGun]
 Spawner           = SP-LaserP2
+
+[O-NeutralGun2P1@O-NeutralGun]
+Spawner           = SP-LaserWallP1
+
+[O-UpwardGun2P1@O-UpwardGun]
+Spawner           = SP-LaserP1
+
+[O-DownwardGun2P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun2P1@O-SuperGun]
+Spawner           = SP-OrbP1
+
+[O-NeutralGun2P2@O-NeutralGun]
+Spawner           = SP-LaserWallP2
+
+[O-UpwardGun2P2@O-UpwardGun]
+Spawner           = SP-LaserP2
+
+[O-DownwardGun2P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun2P2@O-SuperGun]
+Spawner           = SP-OrbP2
+
+[O-NeutralGun3P1@O-NeutralGun]
+Spawner           = SP-LaserP1
+
+[O-UpwardGun3P1@O-UpwardGun]
+Spawner           = SP-OrbP1
+
+[O-DownwardGun3P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun3P1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGun3P2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGun3P2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGun3P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun3P2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+[O-NeutralGun4P1@O-NeutralGun]
+Spawner           = SP-LaserP1
+
+[O-UpwardGun4P1@O-UpwardGun]
+Spawner           = SP-OrbP1
+
+[O-DownwardGun4P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun4P1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGun4P2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGun4P2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGun4P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun4P2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+[O-NeutralGun5P1@O-NeutralGun]
+Spawner           = SP-LaserP1
+
+[O-UpwardGun5P1@O-UpwardGun]
+Spawner           = SP-OrbP1
+
+[O-DownwardGun5P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun5P1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGun5P2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGun5P2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGun5P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun5P2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+[O-NeutralGun6P1@O-NeutralGun]
+Spawner           = SP-LaserP1
+
+[O-UpwardGun6P1@O-UpwardGun]
+Spawner           = SP-OrbP1
+
+[O-DownwardGun6P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun6P1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGun6P2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGun6P2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGun6P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun6P2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+[O-NeutralGun7P1@O-NeutralGun]
+Spawner           = SP-LaserP1
+
+[O-UpwardGun7P1@O-UpwardGun]
+Spawner           = SP-OrbP1
+
+[O-DownwardGun7P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun7P1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGun7P2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGun7P2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGun7P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun7P2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+[O-NeutralGun8P1@O-NeutralGun]
+Spawner           = SP-LaserP1
+
+[O-UpwardGun8P1@O-UpwardGun]
+Spawner           = SP-OrbP1
+
+[O-DownwardGun8P1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGun8P1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGun8P2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGun8P2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGun8P2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGun8P2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+; Spawners
 
 [SP-LaserP1@SP-Spawner]
 Object            = O-LaserP1
@@ -126,11 +586,45 @@ Object            = O-OrbP1
 [SP-OrbP2@SP-Spawner]
 Object            = O-OrbP2
 
+[SP-LaserWallP1@SP-Spawner]
+Object            = O-LaserWallP1
+
+[SP-LaserWallP2@SP-Spawner]
+Object            = O-LaserWallP2
+
 ; Icons
 
-[O-Ship1IconP1]
-Graphic              = G-Ship
+[O-ShipIcon]
 Position             = (0, 0, 0.05)
 Rotation             = 90.0
 UseParentSpace       = position
 IgnoreFromParent     = scale
+
+[O-Ship1IconP1@O-ShipIcon]
+Graphic              = G-Ship1
+
+[O-Ship2IconP1@O-ShipIcon]
+Graphic              = G-Ship2
+
+[O-Ship3IconP1@O-ShipIcon]
+Graphic              = G-Ship3
+
+[O-Ship4IconP1@O-ShipIcon]
+Graphic              = G-Ship4
+Rotation          = -90.0
+
+[O-Ship5IconP1@O-ShipIcon]
+Graphic              = G-Ship5
+Rotation          = -90.0
+
+[O-Ship6IconP1@O-ShipIcon]
+Graphic              = G-Ship6
+Rotation          = -90.0
+
+[O-Ship7IconP1@O-ShipIcon]
+Graphic              = G-Ship7
+Rotation          = -90.0
+
+[O-Ship8IconP1@O-ShipIcon]
+Graphic              = G-Ship8
+Rotation          = -90.0
