--- a/data/config/Menu.ini
+++ b/data/config/Menu.ini
@@ -18,7 +18,7 @@ Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
 Graphic       = G-PilotSelectMenu
 Position      = (0, 0, 0.5)
 Size          = (1920, 1080, 0)
-ChildList     = O-PilotSelectIcon1 # O-PilotSelectIcon2 # O-PilotSelectIcon3 # O-PilotSelectIcon4 # O-PilotSelectIcon5 # O-PilotSelectIcon6
+ChildList     = O-PilotSelectIcon1 # O-PilotSelectIcon2 # O-PilotSelectIcon3 # O-PilotSelectIcon4 # O-PilotSelectIcon5 # O-PilotSelectIcon6 # O-PilotSelectIcon7 # O-PilotSelectIcon8
 
 [G-PilotSelectMenu]
 Texture       = SpaceShooterRedux/Backgrounds/purple.png
@@ -27,7 +27,7 @@ Texture       = SpaceShooterRedux/Backgrounds/purple.png
 
 [O-PilotSelectIcon@ScrollObject]
 Graphic        = G-PilotSelectIcon
-Scale          = (0.3333333333, 0.25, 1) ; x = 1/3, since I only have six pilots ready to test at the moment.
+Scale          = (0.25, 0.25, 1)
 UseParentSpace = both
 
 [G-PilotSelectIcon]
@@ -36,34 +36,36 @@ Pivot          = center
 
 [O-PilotSelectIcon1@O-PilotSelectIcon]
 ShaderList     = SH-OutlineP1
-Position       = (-0.3333333333, 0.125, -0.1)
+Position       = (-0.375, 0.125, -0.1)
 ChildList      = O-Pilot1IconP1
 
 [O-PilotSelectIcon2@O-PilotSelectIcon]
-Position       = (0, 0.125, -0.1)
-;ChildList      = O-Pilot2P1
+Position       = (-0.125, 0.125, -0.1)
+ChildList      = O-Pilot2IconP1
 
 [O-PilotSelectIcon3@O-PilotSelectIcon]
-Position       = (0.3333333333, 0.125, -0.1)
-;ChildList      = O-Pilot3P1
+Position       = (0.125, 0.125, -0.1)
+ChildList      = O-Pilot3IconP1
 
 [O-PilotSelectIcon4@O-PilotSelectIcon]
-Position       = (-0.3333333333, 0.375, -0.1)
-;ChildList      = O-Pilot4P1
+Position       = (0.375, 0.125, -0.1)
+ChildList      = O-Pilot4IconP1
 
 [O-PilotSelectIcon5@O-PilotSelectIcon]
-Position       = (0, 0.375, -0.1)
-;ChildList      = O-Pilot5P1
+Position       = (-0.375, 0.375, -0.1)
+ChildList      = O-Pilot5IconP1
 
 [O-PilotSelectIcon6@O-PilotSelectIcon]
-Position       = (0.3333333333, 0.375, -0.1)
-;ChildList      = O-Pilot6P1
+Position       = (-0.125, 0.375, -0.1)
+ChildList      = O-Pilot6IconP1
 
 [O-PilotSelectIcon7@O-PilotSelectIcon]
-;ChildList      = O-Pilot7P1
+Position       = (0.125, 0.375, -0.1)
+ChildList      = O-Pilot7IconP1
 
 [O-PilotSelectIcon8@O-PilotSelectIcon]
-;ChildList      = O-Pilot8P1
+Position       = (0.375, 0.375, -0.1)
+ChildList      = O-Pilot8IconP1
 
 ; Text
 
